white space bug

--- a/style.css
+++ b/style.css
@@ -556,14 +556,30 @@ footer .sec3 .bug {
     header nav {
         width: 100%;
     }
+    header nav ul{
+        width: 50px;
+        background-color: transparent;
+        left: 300px;
+    }
     header nav ul li p {
         font-size: calc(1rem - 2px);
+        position: absolute;
+        top: 10px;
+        left: -280px;
     }
     header nav ul li a {
-        display: none;
+        position: absolute;
+        top: 0px;
+        left: -70px;
+        color: transparent;
+    }
+    header nav ul ul {
+        background-color: transparent;
+        top: 10px;
+        left: -110px;
     }
     header nav ul ul li {
-        left: -500px;
+        left: -50px;
         margin-top: 5px;
         padding: 1px;
     }
@@ -575,7 +591,7 @@ footer .sec3 .bug {
         background-position: center;
     }
     .main_header div{
-        top: 140px;
+        top: 200px;
         left: 10px;
     }
     .main_header div p {
@@ -607,6 +623,7 @@ footer .sec3 .bug {
     }
     .main_main .border {
         border: none;
+        width: 0px;
     }
     .main_main .border:hover {
         border: none;
@@ -692,6 +709,7 @@ footer .sec3 .bug {
         top: 2450px;
         left: 50px;
         color: #fff;
+        padding-right: 75px;
     }
     .main_main2 .two h3 span {
         -webkit-text-stroke-color: #000;
@@ -699,13 +717,12 @@ footer .sec3 .bug {
     }
     footer {
         width: 100%;
-        height: 600px;
+        height: 560px;
         background-color: #000;
     }
-    footer div .sec1, .sec2, .sec3 {
+    footer div .sec1, footer div .sec2, footer div .sec3 {
         width: 350px;
         height: 150px;
-        margin-right: 0px;
     }
     footer div .sec1, footer div .sec2, footer div .sec3 {
         position: relative;
@@ -713,6 +730,10 @@ footer .sec3 .bug {
     footer div .sec1 {
         top: 350px;
         left: -10px;
+    }
+    footer div .sec1 p {
+        text-align: center;
+        line-height: 100px;
     }
     footer div .sec2 {
         top: 0px;
@@ -722,6 +743,5 @@ footer .sec3 .bug {
         top: -300px;
         left: 10px;
     }
-    
 }
 
